[package]
name = "jetro-dart-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "jetro_dart"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jetro-core = "0.5.7"
serde_json = "1"

[profile.release]
opt-level = 3
# Intentionally match jetro's default release profile (no LTO, default
# codegen-units). Aggressive LTO inlines simd-json's target_feature
# dispatch tables in a way that costs 4–6x on flat_map+filter chains.
